--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.13.1",
     "i18next": "^25.3.2",
+    "laravel-echo": "^2.1.7",
+    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
