--- a/package.json
+++ b/package.json
@@ -54,6 +54,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3"
+    "@babel/eslint-parser": "^7.28.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "eslint": "^9.32.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-webpack-plugin": "^5.0.2"
   }
 }
