--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/socket.io-client": "^3.0.0",
     "ajv": "^6.12.6",
     "antd": "^5.26.4",
     "axios": "^1.11.0",
     "emoji-picker-react": "^4.13.1",
     "i18next": "^25.3.2",
-    "laravel-echo": "^2.1.7",
-    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.28.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/react-icons": "^3.0.0",
     "eslint": "^9.32.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.32.0",
