--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
@@ -10,14 +14,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19.1.6",
     "@types/socket.io-client": "^3.0.0",
     "ajv": "^6.12.6",
     "antd": "^5.26.4",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.1",
     "i18next": "^25.3.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
@@ -26,6 +34,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "sass": "^1.89.2",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
