--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "sass": "^1.89.2",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
